SUBDIRS =   \
    lang    \
    util    \
    stl     \
    cont    \
    iter    \
    fo      \
    algo    \
    string  \
    regex   \
    num

pkginclude_HEADERS =        \
    include/printtuple.h    \
    include/clock.h         \
    include/timepoint.h     \
    include/print.h         \
    include/findbefore.h    \
    include/newkey.h        \
    include/hashval.h       \
    include/buckets.h       \
    include/assoiter.h      \
    include/fopow.h         \
    include/algostuff.h     \
    include/icstring.h
