SUBDIRS =  \
    lang   \
    util   \
    stl    \
    cont   \
    iter   \
    fo     \
    algo   \
    string \
    regex  \
    io     \
    num

pkginclude_HEADERS =         \
    include/printtuple.h     \
    include/clock.h          \
    include/timepoint.h      \
    include/print.h          \
    include/findbefore.h     \
    include/newkey.h         \
    include/hashval.h        \
    include/buckets.h        \
    include/assoiter.h       \
    include/fopow.h          \
    include/algostuff.h      \
    include/icstring.h       \
    include/regexexception.h \
    include/sum1a.h          \
    include/sum2a.h          \
    include/ignore1.h        \
    include/ignore2.h
