AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS = 		\
	foreach1		\
	foreach2		\
	foreach3		\
	count1			\
	minmax1			\
	find1			\
	find2			\
	searchn1		\
	search1			\
	search2			\
	findend1		\
	findof1			\
	adjacentfind1	\
	equal1			\
	ispermutation1	\
	mismatch1		\
	lexicocmp1		\
	issorted1		\
	ispartitioned1	\
	isheap1			\
	allanynone1

foreach1_SOURCES = foreach1.cc

foreach2_SOURCES = foreach2.cc

foreach3_SOURCES = foreach3.cc

count1_SOURCES = count1.cc

minmax1_SOURCES = minmax1.cc

find1_SOURCES = find1.cc

find2_SOURCES = find2.cc

searchn1_SOURCES = searchn1.cc

search1_SOURCES = search1.cc

search2_SOURCES = search2.cc

findend1_SOURCES = findend1.cc

findof1_SOURCES = findof1.cc

adjacentfind1_SOURCES = adjacentfind1.cc

equal1_SOURCES = equal1.cc

ispermutation1_SOURCES = ispermutation1.cc

mismatch1_SOURCES = mismatch1.cc

lexicocmp1_SOURCES = lexicocmp1.cc

issorted1_SOURCES = issorted1.cc

ispartitioned1_SOURCES = ispartitioned1.cc

isheap1_SOURCES = isheap1.cc

allanynone1_SOURCES = allanynone1.cc
