AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS = 		\
	foreach1		\
	foreach2		\
	foreach3		\
	count1			\
	minmax1			\
	find1			\
	find2			\
	searchn1		\
	search1			\
	search2			\
	findend1		\
	findof1			\
	adjacentfind1	\
	equal1			\
	ispermutation1	\
	mismatch1		\
	lexicocmp1		\
	issorted1		\
	ispartitioned1	\
	isheap1			\
	allanynone1		\
	copy1			\
	copy2			\
	copy3			\
	move1			\
	transform1		\
	transform2		\
	swapranges1		\
	fill1			\
	generate1		\
	iota1			\
	replace1		\
	replace2

foreach1_SOURCES = foreach1.cc

foreach2_SOURCES = foreach2.cc

foreach3_SOURCES = foreach3.cc

count1_SOURCES = count1.cc

minmax1_SOURCES = minmax1.cc

find1_SOURCES = find1.cc

find2_SOURCES = find2.cc

searchn1_SOURCES = searchn1.cc

search1_SOURCES = search1.cc

search2_SOURCES = search2.cc

findend1_SOURCES = findend1.cc

findof1_SOURCES = findof1.cc

adjacentfind1_SOURCES = adjacentfind1.cc

equal1_SOURCES = equal1.cc

ispermutation1_SOURCES = ispermutation1.cc

mismatch1_SOURCES = mismatch1.cc

lexicocmp1_SOURCES = lexicocmp1.cc

issorted1_SOURCES = issorted1.cc

ispartitioned1_SOURCES = ispartitioned1.cc

isheap1_SOURCES = isheap1.cc

allanynone1_SOURCES = allanynone1.cc

copy1_SOURCES = copy1.cc

copy2_SOURCES = copy2.cc

copy3_SOURCES = copy3.cc

move1_SOURCES = move1.cc

transform1_SOURCES = transform1.cc

transform2_SOURCES = transform2.cc

swapranges1_SOURCES = swapranges1.cc

fill1_SOURCES = fill1.cc

generate1_SOURCES = generate1.cc

iota1_SOURCES = iota1.cc

replace1_SOURCES = replace1.cc

replace2_SOURCES = replace2.cc
