AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS = 		\
	foreach1		\
	foreach2		\
	foreach3		\
	count1			\
	minmax1			\
	find1			\
	find2			\
	searchn1		\
	search1			\
	search2			\
	findend1		\
	findof1			\
	adjacentfind1	\
	equal1			\
	ispermutation1	\
	mismatch1		\
	lexicocmp1		\
	issorted1		\
	ispartitioned1	\
	isheap1			\
	allanynone1		\
	copy1			\
	copy2			\
	copy3			\
	move1			\
	transform1		\
	transform2		\
	swapranges1		\
	fill1			\
	generate1		\
	iota1			\
	replace1		\
	replace2		\
	remove1			\
	remove2			\
	unique1			\
	unique2			\
	unique3			\
	reverse1		\
	rotate1			\
	rotate2			\
	permutation1	\
	shuffle1		\
	randomshuffle1	\
	partition1		\
	partitioncopy1	\
	sort1			\
	sort2			\
	partialsort1	\
	partialsort2	\
	nthelement1		\
	heap1			\
	binarysearch1	\
	includes1		\
	bounds1			\
	equalrange1		\
	merge1			\
	sorted1			\
	inplacemerge1

foreach1_SOURCES = foreach1.cc

foreach2_SOURCES = foreach2.cc

foreach3_SOURCES = foreach3.cc

count1_SOURCES = count1.cc

minmax1_SOURCES = minmax1.cc

find1_SOURCES = find1.cc

find2_SOURCES = find2.cc

searchn1_SOURCES = searchn1.cc

search1_SOURCES = search1.cc

search2_SOURCES = search2.cc

findend1_SOURCES = findend1.cc

findof1_SOURCES = findof1.cc

adjacentfind1_SOURCES = adjacentfind1.cc

equal1_SOURCES = equal1.cc

ispermutation1_SOURCES = ispermutation1.cc

mismatch1_SOURCES = mismatch1.cc

lexicocmp1_SOURCES = lexicocmp1.cc

issorted1_SOURCES = issorted1.cc

ispartitioned1_SOURCES = ispartitioned1.cc

isheap1_SOURCES = isheap1.cc

allanynone1_SOURCES = allanynone1.cc

copy1_SOURCES = copy1.cc

copy2_SOURCES = copy2.cc

copy3_SOURCES = copy3.cc

move1_SOURCES = move1.cc

transform1_SOURCES = transform1.cc

transform2_SOURCES = transform2.cc

swapranges1_SOURCES = swapranges1.cc

fill1_SOURCES = fill1.cc

generate1_SOURCES = generate1.cc

iota1_SOURCES = iota1.cc

replace1_SOURCES = replace1.cc

replace2_SOURCES = replace2.cc

remove1_SOURCES = remove1.cc

remove2_SOURCES = remove2.cc

unique1_SOURCES = unique1.cc

unique2_SOURCES = unique2.cc

unique3_SOURCES = unique3.cc

reverse1_SOURCES = reverse1.cc

rotate1_SOURCES = rotate1.cc

rotate2_SOURCES = rotate2.cc

permutation1_SOURCES = permutation1.cc

shuffle1_SOURCES = shuffle1.cc

randomshuffle1_SOURCES = randomshuffle1.cc

partition1_SOURCES = partition1.cc

partitioncopy1_SOURCES = partitioncopy1.cc

sort1_SOURCES = sort1.cc

sort2_SOURCES = sort2.cc

partialsort1_SOURCES = partialsort1.cc

partialsort2_SOURCES = partialsort2.cc

nthelement1_SOURCES = nthelement1.cc

heap1_SOURCES = heap1.cc

binarysearch1_SOURCES = binarysearch1.cc

includes1_SOURCES = includes1.cc

bounds1_SOURCES = bounds1.cc

equalrange1_SOURCES = equalrange1.cc

merge1_SOURCES = merge1.cc

sorted1_SOURCES = sorted1.cc

inplacemerge1_SOURCES = inplacemerge1.cc
