AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS = 			\
	array1				\
	vector1				\
	deque1				\
	list1				\
	forwardlistfind1	\
	forwardlistfind2	\
	forwardlistsplice1	\
	forwardlist1

array1_SOURCES = array1.cc

vector1_SOURCES = vector1.cc

deque1_SOURCES = deque1.cc

list1_SOURCES = list1.cc

forwardlistfind1_SOURCES = forwardlistfind1.cc

forwardlistfind2_SOURCES = forwardlistfind2.cc

forwardlistsplice1_SOURCES = forwardlistsplice1.cc

forwardlist1_SOURCES = forwardlist1.cc
