AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS = 			\
	array1				\
	vector1				\
	deque1				\
	list1				\
	forwardlistfind1	\
	forwardlistfind2	\
	forwardlistsplice1	\
	forwardlist1		\
	setrange1			\
	set1				\
	multiset1			\
	setcmp1				\
	map1				\
	map2				\
	multimap1			\
	mapfind1			\
	mapcmp1

array1_SOURCES = array1.cc

vector1_SOURCES = vector1.cc

deque1_SOURCES = deque1.cc

list1_SOURCES = list1.cc

forwardlistfind1_SOURCES = forwardlistfind1.cc

forwardlistfind2_SOURCES = forwardlistfind2.cc

forwardlistsplice1_SOURCES = forwardlistsplice1.cc

forwardlist1_SOURCES = forwardlist1.cc

setrange1_SOURCES = setrange1.cc

set1_SOURCES = set1.cc

multiset1_SOURCES = multiset1.cc

setcmp1_SOURCES = setcmp1.cc

map1_SOURCES = map1.cc

map2_SOURCES = map2.cc

multimap1_SOURCES = multimap1.cc

mapfind1_SOURCES = mapfind1.cc

mapcmp1_SOURCES = mapcmp1.cc
