AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS = 	\
	sort1		\
	sequence1	\
	sequence2	\
	foreach3	\
	removeif1	\
	bind1		\
	compose3	\
	bind2		\
	fopow1		\
	lambda1		\
	lambda2		\
	lambda3		\
	lambda4		\
	lambda5

sort1_SOURCES = sort1.cc

sequence1_SOURCES = sequence1.cc

sequence2_SOURCES = sequence2.cc

foreach3_SOURCES = foreach3.cc

removeif1_SOURCES = removeif1.cc

bind1_SOURCES = bind1.cc

compose3_SOURCES = compose3.cc

bind2_SOURCES = bind2.cc

fopow1_SOURCES = fopow1.cc

lambda1_SOURCES = lambda1.cc

lambda2_SOURCES = lambda2.cc

lambda3_SOURCES = lambda3.cc

lambda4_SOURCES = lambda4.cc

lambda5_SOURCES = lambda5.cc
