AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS =       \
    io1              \
	timemanipulator1 \
    summain          \
    charcat1         \
    fstream1         \
    fstream2         \
    cat1             \
    cat2             \
    sstream1         \
    sstream2         \
    streambuffer1    \
    streambuffer2    \
    streamredirect1  \
    streamreadwrite1 \
    charcat2

io1_SOURCES = io1.cc

timemanipulator1_SOURCES = timemanipulator1.cc

summain_SOURCES = summain.cc

charcat1_SOURCES = charcat1.cc

fstream1_SOURCES = fstream1.cc

fstream2_SOURCES = fstream2.cc

cat1_SOURCES = cat1.cc

cat2_SOURCES = cat2.cc

sstream1_SOURCES = sstream1.cc

sstream2_SOURCES = sstream2.cc

streambuffer1_SOURCES = streambuffer1.cc

streambuffer2_SOURCES = streambuffer2.cc

streamredirect1_SOURCES = streamredirect1.cc

streamreadwrite1_SOURCES = streamreadwrite1.cc

charcat2_SOURCES = charcat2.cc
