AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS =      \
    itercategory1   \
    advance1        \
    distance1       \
    iterswap1       \
    reviter1        \
    reviter2        \
    reviter3        \
    reviter4        \
    backinserter1   \
    frontinserter1  \
    inserter1       \
    ostreamiter1    \
    istreamiter1    \
    advance2        \
    assoiter1

itercategory1_SOURCES = itercategory1.cc

advance1_SOURCES = advance1.cc

distance1_SOURCES = distance1.cc

iterswap1_SOURCES = iterswap1.cc

reviter1_SOURCES = reviter1.cc

reviter2_SOURCES = reviter2.cc

reviter3_SOURCES = reviter3.cc

reviter4_SOURCES = reviter4.cc

backinserter1_SOURCES = backinserter1.cc

frontinserter1_SOURCES = frontinserter1.cc

inserter1_SOURCES = inserter1.cc

ostreamiter1_SOURCES = ostreamiter1.cc

istreamiter1_SOURCES = istreamiter1.cc

advance2_SOURCES = advance2.cc

assoiter1_SOURCES = assoiter1.cc
