AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS =  \
    random1     \
    random2     \
    dist1       \
    complex1    \
    complex2

random1_SOURCES = random1.cc

random2_SOURCES = random2.cc

dist1_SOURCES = dist1.cc

complex1_SOURCES = complex1.cc

complex2_SOURCES = complex2.cc
