AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS =      \
    regex1          \
    regex2          \
    regex3          \
    regexiter1      \
	regextokeniter1 \
    regexreplace1   \
    regex4          \
    regex5

regex1_SOURCES = regex1.cc

regex2_SOURCES = regex2.cc

regex3_SOURCES = regex3.cc

regexiter1_SOURCES = regexiter1.cc

regextokeniter1_SOURCES = regextokeniter1.cc

regexreplace1_SOURCES = regexreplace1.cc

regex4_SOURCES = regex4.cc

regex5_SOURCES = regex5.cc
