AM_CXXFLAGS = -Wall -Wextra

bin_PROGRAMS = 			\
	vector1				\
	deque1				\
	array1				\
	list1				\
	list2				\
	forwardlist1		\
	multiset1			\
	multimap1			\
	unorderedmultiset1	\
	unorderedmultimap1	\
	associativearray1

vector1_SOURCES = vector1.cc

deque1_SOURCES = deque1.cc

array1_SOURCES = array1.cc

list1_SOURCES = list1.cc

list2_SOURCES = list2.cc

forwardlist1_SOURCES = forwardlist1.cc

multiset1_SOURCES = multiset1.cc

multimap1_SOURCES = multimap1.cc

unorderedmultiset1_SOURCES = unorderedmultiset1.cc

unorderedmultimap1_SOURCES = unorderedmultimap1.cc

associativearray1_SOURCES = associativearray1.cc

pkginclude_HEADERS =
