AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS = 			\
	vector1				\
	deque1				\
	array1				\
	list1				\
	list2				\
	forwardlist1		\
	multiset1			\
	multimap1			\
	unorderedmultiset1	\
	unorderedmultimap1	\
	associativearray1	\
	list1old			\
	set1				\
	unorderedmultiset2	\
	algo1				\
	algo1old			\
	find1				\
	copy1				\
	copy2				\
	ioiter1				\
	reviter1			\
	remove1				\
	remove2				\
	remove3				\
	remove4				\
	foreach1			\
	transform1			\
	prime1				\
	sort1				\
	lambda1				\
	sort2				\
	foreach2			\
	add1				\
	fo1					\
	bind1

vector1_SOURCES = vector1.cc

deque1_SOURCES = deque1.cc

array1_SOURCES = array1.cc

list1_SOURCES = list1.cc

list2_SOURCES = list2.cc

forwardlist1_SOURCES = forwardlist1.cc

multiset1_SOURCES = multiset1.cc

multimap1_SOURCES = multimap1.cc

unorderedmultiset1_SOURCES = unorderedmultiset1.cc

unorderedmultimap1_SOURCES = unorderedmultimap1.cc

associativearray1_SOURCES = associativearray1.cc

list1old_SOURCES = list1old.cc

set1_SOURCES = set1.cc

unorderedmultiset2_SOURCES = unorderedmultiset2.cc

algo1_SOURCES = algo1.cc

algo1old_SOURCES = algo1old.cc

find1_SOURCES = find1.cc

copy1_SOURCES = copy1.cc

copy2_SOURCES = copy2.cc

ioiter1_SOURCES = ioiter1.cc

reviter1_SOURCES = reviter1.cc

remove1_SOURCES = remove1.cc

remove2_SOURCES = remove2.cc

remove3_SOURCES = remove3.cc

remove4_SOURCES = remove4.cc

foreach1_SOURCES = foreach1.cc

transform1_SOURCES = transform1.cc

prime1_SOURCES = prime1.cc

sort1_SOURCES = sort1.cc

lambda1_SOURCES = lambda1.cc

sort2_SOURCES = sort2.cc

foreach2_SOURCES = foreach2.cc

add1_SOURCES = add1.cc

fo1_SOURCES = fo1.cc

bind1_SOURCES = bind1.cc
