AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS =      \
    string1         \
    string2         \
    stringnumconv1  \
    stringiter1     \
    stringiter2     \
    string3         \
    icstring1

string1_SOURCES = string1.cc

string2_SOURCES = string2.cc

stringnumconv1_SOURCES = stringnumconv1.cc

stringiter1_SOURCES = stringiter1.cc

stringiter2_SOURCES = stringiter2.cc

string3_SOURCES = string3.cc

icstring1_SOURCES = icstring1.cc
