AM_CXXFLAGS = -Wall -Wextra

bin_PROGRAMS = 	\
	pair1 		\
	tuple1 		\
	tuple2 		\
    sharedptr1 	\
	sharedptr2	\
	sharedptr3	\
	weakptr1	\
	weakptr2	\
	uniqueptr1

pair1_SOURCES = pair1.cc

tuple1_SOURCES = tuple1.cc

tuple2_SOURCES = tuple2.cc

sharedptr1_SOURCES = sharedptr1.cc

sharedptr2_SOURCES = sharedptr2.cc

sharedptr3_SOURCES = sharedptr3.cc

weakptr1_SOURCES = weakptr1.cc

weakptr2_SOURCES = weakptr2.cc

uniqueptr1_SOURCES = uniqueptr1.cc

pkginclude_HEADERS = \
	printtuple.h
