AM_CXXFLAGS = -Wall -Wextra -I$(top_srcdir)/src/include

bin_PROGRAMS = 	\
	pair1 		\
	tuple1 		\
	tuple2 		\
    sharedptr1 	\
	sharedptr2	\
	sharedptr3	\
	weakptr1	\
	weakptr2	\
	uniqueptr1  \
	limits1		\
	minmax1		\
	ratio1 		\
	clock1		\
	chrono1		\
	chrono2		\
	timepoint1

pair1_SOURCES = pair1.cc

tuple1_SOURCES = tuple1.cc

tuple2_SOURCES = tuple2.cc

sharedptr1_SOURCES = sharedptr1.cc

sharedptr2_SOURCES = sharedptr2.cc

sharedptr3_SOURCES = sharedptr3.cc

weakptr1_SOURCES = weakptr1.cc

weakptr2_SOURCES = weakptr2.cc

uniqueptr1_SOURCES = uniqueptr1.cc

limits1_SOURCES = limits1.cc

minmax1_SOURCES = minmax1.cc

ratio1_SOURCES = ratio1.cc

clock1_SOURCES = clock1.cc

chrono1_SOURCES = chrono1.cc

chrono2_SOURCES = chrono2.cc

timepoint1_SOURCES = timepoint1.cc
